--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -10,7 +10,7 @@
 @import "includes/stack";
 // Some Styles...
 body {
-  width: 100%;
+  //width: 100%;
   height: 100%;
   font-size: $font-size-base;
 }
