--- a/builds/development/sass/style.scss
+++ b/builds/development/sass/style.scss
@@ -1,8 +1,8 @@
 // All Our Dependencies
-@import "../../dist/libs/bootstrap/css/bootstrap.css";
-@import "../../dist/libs/bootstrap-material-design/css/bootstrap-material-design.css";
+@import "/libs/bootstrap/css/bootstrap.css";
+@import "/libs/bootstrap-material-design/css/bootstrap-material-design.css";
 //@import "../../dist/libs/bootstrap-material-design/css/material-fullpalette.css";
-@import "../../dist/libs/bootstrap-material-design/css/ripples.css";
+@import "/libs/bootstrap-material-design/css/ripples.css";
 //=== === ===
 // Our SASS Files
 @import "includes/varibles";
@@ -13,4 +13,5 @@ body {
   //width: 100%;
   height: 100%;
   font-size: $font-size-base;
+  background-color: #00b3ee;
 }
